Fix z-index of hero images
fix to index to able to let buttons state hover work and click them.

--- a/css/style.css
+++ b/css/style.css
@@ -230,6 +230,7 @@ button {
     position: absolute;
     height: 30.5rem;
     overflow-x: hidden;
+    z-index: -1;
   }
   .hero-img .images--tablet {
     display: none;
